--- a/src/static/html/login.html
+++ b/src/static/html/login.html
@@ -2,14 +2,14 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <link rel = "stylesheet" href = "/static/css/style.css">
+        <link rel = "stylesheet" href = "/static/css/login.css">
     </head>
     <body>
         <main>
             <section class = "registration">
                 <div class = "background">
-                    <img class="logo" width="128px" height="80px" src="/static/image/photo_2024-03-17_17-09-34.jpg">
-                    <h1 class="header1">Вход сайт</h1>
+                    <img class="logo" width="128px" height="80px" src="/static/image/login.jpg">
+                    <h1 class="header1">Вход</h1>
                         <div class = "cnotainer">
                             <div class = "item">
                                 <div class = "txt">                                  
@@ -17,27 +17,31 @@
                                         <div class="form">
                                             <input type ="email" name="email" id="mail-field" placeholder="Почта" class="base-input" required>
                                             <input type ="password" name="password" id="password-field" placeholder="Пароль" class="base-input" minlength="8" maxlength="20" required>
-                                            <input class="show-password" type="checkbox" id="show-pass"> 
-                                            <label class="checkbox-label" for="show-pass">Показать пароль</label>
+                                            <p><input class="show-password" type="checkbox" id="show-pass"> 
+                                            <label class="checkbox-label" for="show-pass">Показать пароль</label> 
+                                            </p>
                                             <div class="galochka-section">
                                                 <input type="checkbox" name="" class="check-box-button" id="remember">
-                                                <label for="remember">запомнить</label>
-                                                <input type="checkbox" name="" class="check-box-button" id="register">
-                                                <label for="register">регистрация</label>
+                                                <label for="remember" class="check-box-button">Запомнить</label>
+                                                <a href ="#" class = "clear-password">Сбросить пароль</a>
                                             </div>
-                                            <button type="submit" class="enter-submit-button usual-button" disabled>Создать</button>
+                                            <div class = "log-in-button"><button type="submit" class="enter-submit-button-usual-button" disabled >Вход</button></div>
                                         </div>
                                     </form>
+                                    <div class = "sign-in-button">
+                                        <p><a class ="sign-in-button-item" href ="https://vk.com/miami51" id="sign-in-field" >Нет аккаунта?</a></p>
+                                    </div>  
                                 </div>      
                             </div>       
                         </div>
                 </div>
-                <a class="skip-button-section">
-                    <p class="skip-text">пропустить регистрацию</p>
+                <a class="skip-button-section" href ="https://vk.com/miami51">
+                    <p class="skip-text">Вернуться на главную</p>
                 </a>    
             </section>
         </main>  
         <script src="/static/js/login.js"></script>
+        <script src="/static/js/login-form.js"></script>
     </body>
     <footer>
     </footer>
