change all program, apgrade profile method

--- a/src/static/html/headpage.html
+++ b/src/static/html/headpage.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="headpage.css">   
+        <link rel="stylesheet" href="/static/css/headpage.css">   
     </head>
     <body>
         <header class ="main-header">
             <div class ="row">
-                <a href = "#" 
+                <a href = "/" 
                     class="nav-link-1" id ="link-1"><nobr>Лого</nobr></a>
-                <a href = "#" 
+                <a href = "/my_profile" 
                         class="nav-link-2" id ="link-2"><nobr>Моя страница</nobr></a>
                 <a href = "#" 
                     class="nav-link-3" id ="link-3"><nobr>Поиск</nobr></a>                           
@@ -58,6 +58,7 @@
                      <p></p>
             </section>
         </main>
+        <script src ="/static/js/headpage.js"></script>
     </body>
     <footer>        
     </footer>
