--- a/src/static/html/login.html
+++ b/src/static/html/login.html
@@ -15,7 +15,7 @@
                                 <div class = "txt">                                  
                                     <form class = "Mail" id = "entrance-form" action ="#" method ="get" >
                                         <div class="form">
-                                            <input type ="email" name="email" id="mail-field" placeholder="Почта" class="base-input" required>
+                                            <input type ="email" name="username" id="mail-field" placeholder="Почта" class="base-input" required>
                                             <input type ="password" name="password" id="password-field" placeholder="Пароль" class="base-input" minlength="8" maxlength="20" required>
                                             <p><input class="show-password" type="checkbox" id="show-pass"> 
                                             <label class="checkbox-label" for="show-pass">Показать пароль</label> 
@@ -25,11 +25,11 @@
                                                 <label for="remember" class="check-box-button">Запомнить</label>
                                                 <a href ="#" class = "clear-password">Сбросить пароль</a>
                                             </div>
-                                            <div class = "log-in-button"><button type="submit" class="enter-submit-button-usual-button" disabled >Вход</button></div>
+                                            <div class = "log-in-button"><button type="submit" class="enter-submit-button-usual-button">Вход</button></div>
                                         </div>
                                     </form>
                                     <div class = "sign-in-button">
-                                        <p><a class ="sign-in-button-item" href ="https://vk.com/miami51" id="sign-in-field" >Нет аккаунта?</a></p>
+                                        <p><a class ="sign-in-button-item" href ="/register" id="sign-in-field" >Нет аккаунта?</a></p>
                                     </div>  
                                 </div>      
                             </div>       
