add download, change static

--- a/src/static/html/login.html
+++ b/src/static/html/login.html
@@ -35,7 +35,7 @@
                             </div>       
                         </div>
                 </div>
-                <a class="skip-button-section" href ="https://vk.com/miami51">
+                <a class="skip-button-section" href ="/">
                     <p class="skip-text">Вернуться на главную</p>
                 </a>    
             </section>
