--- a/src/static/html/registration.html
+++ b/src/static/html/registration.html
@@ -56,7 +56,7 @@
                 
                                             <div class = "reg-button">       
                                                 <p>
-                                                    <button class = "registration-button-item" type ="submit" >Создать</button>
+                                                    <button class = "registration-button-item" type ="submit" disabled>Создать</button>
                                                 </p> 
                                             </div>    
                                         </form>    
@@ -64,7 +64,7 @@
                                 </div>         
                             </div>     
                             <div class = "sign-in-button">
-                                <p><a class ="sign-in-button-item" href ="https://vk.com/miami51" id="sign-in-field" >Есть аккаунт?</a></p>
+                                <p><a class ="sign-in-button-item" href ="/login" id="sign-in-field" >Есть аккаунт?</a></p>
                             </div>      
                         </div>        
                 </div>    
@@ -76,7 +76,7 @@
     <footer>
         <div class = "header-page">
             <div class ="header-page-item">
-                <a href ="https://vk.com/miami51" class ="head-page-link"><nobr>Вернуться на главную</nobr></a>
+                <a href ="/" class ="head-page-link"><nobr>Вернуться на главную</nobr></a>
             </div>
         </div>
     </footer>
