--- a/src/static/html/registration.html
+++ b/src/static/html/registration.html
@@ -40,8 +40,8 @@
                                             </p>
 
                                             <p>
-                                                <label>Мужской<input type = "radio" name ="sex"  value = "male" id="male-field" required></label>
-                                                <label>Женский<input type = "radio" name ="sex" value = "female" id="female-feld" required></label>   
+                                                <label>Мужской<input type = "radio" name ="sex"  value = "Мужской" id="male-field" required></label>
+                                                <label>Женский<input type = "radio" name ="sex" value = "Женский" id="female-feld" required></label>   
                                             </p> 
 
                                             <p>
