--- a/src/static/html/headpage.html
+++ b/src/static/html/headpage.html
@@ -13,13 +13,14 @@
                     class="nav-link-1" id ="link-1"><nobr>Лого</nobr></a>
                 <a href = "/my_profile" 
                         class="nav-link-2" id ="link-2"><nobr>Моя страница</nobr></a>
-                <a href = "#" 
+                <a href = "/search" 
                     class="nav-link-3" id ="link-3"><nobr>Поиск</nobr></a>                           
                         <!--Вот тут если не авторизированный пользователь, то вторая ссылка пропадает display:none, в третьей текст меняется на "Вход"
                         и добавляется margin-left: calc(50% - 130px);, у в четвертой текст меняется на "Регистрация" и соответственно ссылки меняются
                         все это по класссам и айдишникам джавой -->
-                <a href = ""
-                    class="nav-link-4" id ="link-4"><nobr>Выйти</nobr></a>      
+
+                <a href ="/register" class="nav-link-5 hidden-button" id="link-5"><nobr>Регистрация</nobr></a>   
+                <a href = "" class="nav-link-4" id ="link-4"><nobr>Выйти</nobr></a>      
                 <script>
                     document.getElementById("link-4").addEventListener("click", function(event) {
                         event.preventDefault();
